--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [Main]
-width=480
-savepos=0
-height=480
+savepos=1
+width=696
+height=499
+top=85
+left=43
 
 [DB]
 type=M
@@ -10,3 +12,10 @@ password=n
 
 [UI]
 showprodlist=1
+rolebg=#EEF
+splitmembers=0
+commalessname=0
+headthumb=1
+
+[Debug]
+termcolors=1
